Version 0.1.5 -> 0.1.6:

Changes:

f

Known bugs:



Upcoming features:

- Better separate the model, view and controller.
- Implement correct behaviour when a subgame ends in a draw.