@@ -7,8 +7,8 @@ package tttx9;
  */
 public class Controller {
 
-	TTTx9Game ttt;
-	View view;
+	private TTTx9Game ttt;
+	private View view;
 	
 	public Controller(TTTx9Game ttt, View view) {
 		this.ttt = ttt;
